--- a/html/recettes.html
+++ b/html/recettes.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">    
     <title>Recipes</title>    <link rel="shortcut icon" href="../assets/icons/logo.jpg" type="image/x-icon">
     <script defer src="../main.js"></script>
-    <script defer src="../subject/utils.js"></script>
-    <script defer src="../subject/recettes-data.js"></script>
-    <script defer src="../subject/api-functions.js"></script>
-    <script defer src="../subject/favorites-manager.js"></script>
-    <script defer src="../subject/recipe-display.js"></script>
-    <script defer src="../subject/app-init.js"></script>
+    <script defer src="../js/utils.js"></script>
+    <script defer src="../js/recettes-data.js"></script>
+    <script defer src="../js/api-functions.js"></script>
+    <script defer src="../js/favorites-manager.js"></script>
+    <script defer src="../js/recipe-display.js"></script>
+    <script defer src="../js/app-init.js"></script>
     <link rel="stylesheet" href="../style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
