--- a/html/a_propos.html
+++ b/html/a_propos.html
@@ -4,9 +4,17 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>A propos</title>
-         <link rel="shortcut icon" href="../assets/log.png" type="image/x-icon">
+         <link rel="shortcut icon" href="../assets/icons/logo.jpg" type="image/x-icon">
         <script defer src="../main.js"></script>
+        <script defer src="../js/utils.js"></script>
+        <script defer src="../js/recettes-data.js"></script>
+        <script defer src="../js/api-functions.js"></script>
+        <script defer src="../js/favorites-manager.js"></script>
+        <script defer src="../js/recipe-display.js"></script>
+        <script defer src="../js/app-init.js"></script>
         <link rel="stylesheet" href="../style.css" />
+        <link rel="stylesheet" href="../css/benoit.css" />
+        <link rel="stylesheet" href="../css/laura.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
