--- a/html/favoris.html
+++ b/html/favoris.html
@@ -13,6 +13,8 @@
         <script defer src="../js/recipe-display.js"></script>
         <script defer src="../js/app-init.js"></script>
         <link rel="stylesheet" href="../style.css" />
+        <link rel="stylesheet" href="../css/benoit.css" />
+        <link rel="stylesheet" href="../css/laura.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
