--- a/html/recettes.html
+++ b/html/recettes.html
@@ -12,6 +12,8 @@
     <script defer src="../js/recipe-display.js"></script>
     <script defer src="../js/app-init.js"></script>
     <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../css/benoit.css">
+    <link rel="stylesheet" href="../css/laura.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
