update icons and links after fusion

--- a/html/a_propos.html
+++ b/html/a_propos.html
@@ -26,7 +26,7 @@
           <header>
             <nav>
                 <ul class="toggle">
-                    <li class="closeBtnMenu"> <img src="../assets/close.png" alt="close menu button"></li>
+                    <li class="closeBtnMenu"> <img src="../assets/icons/close.png" alt="close menu button"></li>
                     <li><a href="../index.html">Accueil</a></li>
                     <li>
                         <a href="#">Ajouter une recette</a>
@@ -46,17 +46,23 @@
                     </li>
                     <li><a href="others/favoris.html">Mes favoris</a></li>
                     <li><a href="others/aPropos.html">À propos</a></li>
-                    <li class="burgerBtn"><img src="../assets/menu-burger.png" alt="menu burger"></li>
+                     <li>
+                        <img
+                            class="burgerBtn"
+                            src="../assets/icons/menu-burger.png"
+                            alt="menu burger"
+                        />
+                    </li>
                 </ul>
 
                 <div class="picto">
                     <img
-                        src="../assets/moon.png"
+                        src="../assets/icons/moon.png"
                         alt="change light mode"
                         id="moon"
                     />
                     <img
-                        src="../assets/sunny.png"
+                        src="../assets/icons/sunny.png"
                         alt="change light mode"
                         id="sun"
                     />
