--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <nav>
                 <ul class="toggle">
                     <li class="closeBtnMenu">
-                        <img src="assets/icons/menu-burger.png" alt="close menu button" />
+                        <img src="assets/icons/close.png" alt="close menu button" />
                     </li>
                     <li><a href="index.html">Accueil</a></li>
                     <li>
@@ -186,12 +186,14 @@
                 <template class="eachCard">
                     <div class="card">
                         <img class="mealPic" src="" alt=""/>
+                        <div class="heart-buttonDiv">
                         <img
                             class="heart-button"
                             src="assets/icons/grayHeart.jpg"
                          alt="Favori"
                          onclick="window.handleToggleFavorite()"
                          style="cursor: pointer;">
+                         </div>
 
                         <div class="recepiePresentation recette-header-index">
                             <h3></h3>
