mise en page et debug navbar favori + recette + lien avec a-propo

--- a/html/recettes.html
+++ b/html/recettes.html
@@ -18,25 +18,36 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
     </head>
-           <body>
-            <header>
-                <nav>
-                    <section class="title">
-                        <div><a href="../index.html">G</a></div>
-                        <h1>GourmetTech</h1>
-                    </section>
-                    <ul class="menuList">
-                        <li><a href="../index.html">Accueil</a></li>
-                        <li><a href="#">Ajouter une recette</a></li>
-                        <li><a href="favoris.html">Mes favoris</a></li>
-                        <li><a href="a_propos.html">À propos</a></li>
-                    </ul>
-                    <div class="picto">
-                        <img src="../assets/icons/menu-burger.png" alt="menuBurger" id="burgerMenu">
-                        <img src="../assets/icons/moon.png" alt="change light mode" id="moon">
-                    </div>
-                </nav>
-            </header>
+    
+    <body>
+        <header>
+            <nav>
+                <ul class="toggle">
+                    <li class="closeBtnMenu"> <img src="../assets/icons/close.png" alt="close menu button"></li>
+                    <li><a href="../index.html">Accueil</a></li>
+                    <li><a href="#">Ajouter une recette</a></li>
+                    <li><a href="favoris.html">Mes favoris</a></li>
+                    <li><a href="aPropos.html">À propos</a></li>
+                </ul>
+
+                <section class="title">
+                    <div><a href="../index.html">G</a></div>
+                    <h1>GourmetTech</h1>
+                </section>
+                <ul class="menuList">
+                    <li><a href="../index.html">Accueil</a></li>
+                    <li><a href="#">Ajouter une recette</a></li>
+                    <li><a href="favoris.html">Mes favoris</a></li>
+                    <li><a href="a_propos.html">À propos</a></li>
+                    <li><img class="burgerBtn" src="../assets/icons/menu-burger.png" alt="menu burger"/></li>
+                </ul>
+
+                <div class="picto">
+                    <img src="../assets/icons/moon.png" alt="change light mode" id="moon"/>
+                    <img src="../assets/icons/sunny.png" alt="change light mode" id="sun"/>
+                </div>
+            </nav>
+        </header>
             
             <main>
                 <div class="recette-detail">
