--- a/html/a_propos.html
+++ b/html/a_propos.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta charset="UTF-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <title>A propos</title>
          <link rel="shortcut icon" href="../assets/icons/logo.jpg" type="image/x-icon">
         <script defer src="../main.js"></script>
@@ -12,63 +12,45 @@
         <script defer src="../js/favorites-manager.js"></script>
         <script defer src="../js/recipe-display.js"></script>
         <script defer src="../js/app-init.js"></script>
-        <link rel="stylesheet" href="../style.css" />
-        <link rel="stylesheet" href="../css/benoit.css" />
-        <link rel="stylesheet" href="../css/laura.css" />
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link
-            href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
-            rel="stylesheet"
-        />
+        <link rel="stylesheet" href="../style.css"/>
+        <link rel="stylesheet" href="../css/benoit.css"/>
+        <link rel="stylesheet" href="../css/laura.css"/>
+        <link rel="preconnect" href="https://fonts.googleapis.com"/>
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
+        <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet"/>
     </head>
+
+
     <body class="aProposBody">
           <header>
             <nav>
                 <ul class="toggle">
                     <li class="closeBtnMenu"> <img src="../assets/icons/close.png" alt="close menu button"></li>
                     <li><a href="../index.html">Accueil</a></li>
-                    <li>
-                        <a href="#">Ajouter une recette</a>
-                    </li>
+                    <li><a href="#">Ajouter une recette</a></li>
                     <li><a href="favoris.html">Mes favoris</a></li>
-                    <li><a href="aPropos.html">À propos</a></li>
+                    <li><a href="a_propos.html">À propos</a></li>
                 </ul>
-
                 <section class="title">
                     <div><a href="../index.html">G</a></div>
                     <h1>GourmetTech</h1>
                 </section>
                 <ul class="menuList">
                     <li><a href="../index.html">Accueil</a></li>
-                    <li>
-                        <a href="#">Ajouter une recette</a>
-                    </li>
+                    <li><a href="#">Ajouter une recette</a></li>
                     <li><a href="favoris.html">Mes favoris</a></li>
-                    <li><a href="aPropos.html">À propos</a></li>
+                    <li><a href="a_propos.html">À propos</a></li>
                      <li>
-                        <img
-                            class="burgerBtn"
-                            src="../assets/icons/menu-burger.png"
-                            alt="menu burger"
-                        />
+                        <img class="burgerBtn" src="../assets/icons/menu-burger.png" alt="menu burger"/>
                     </li>
                 </ul>
-
                 <div class="picto">
-                    <img
-                        src="../assets/icons/moon.png"
-                        alt="change light mode"
-                        id="moon"
-                    />
-                    <img
-                        src="../assets/icons/sunny.png"
-                        alt="change light mode"
-                        id="sun"
-                    />
+                    <img src="../assets/icons/moon.png" alt="change light mode" id="moon"/>
+                    <img src="../assets/icons/sunny.png" alt="change light mode" id="sun"/>
                 </div>
             </nav>
         </header>
+
         <main>
             <section class="presAndContact">
                 <section class="presentation">
@@ -92,41 +74,11 @@
                 </section>
                 <section class="contact">
                     <form>
-                        <input
-                            type="text"
-                            name="firstName"
-                            id="firstName"
-                            required
-                            placeholder="Prénom"
-                        />
-                        <input
-                            type="text"
-                            name="lastName"
-                            id="lastName"
-                            required
-                            placeholder="Nom"
-                        />
-                        <input
-                            type="email"
-                            name="email"
-                            id="email"
-                            required
-                            placeholder="Email"
-                        />
-                        <input
-                            type="tel"
-                            name="tel"
-                            id="tel"
-                            required
-                            placeholder="Portable"
-                        />
-                        <textarea
-                            name="textarea"
-                            id="textarea"
-                            required
-                            spellcheck="true"
-                            placeholder="Ecrivez votre demande"
-                        ></textarea>
+                        <input type="text" name="firstName" id="firstName" required placeholder="Prénom" />
+                        <input type="text" name="lastName" id="lastName" required placeholder="Nom" />
+                        <input type="email" name="email" id="email" required placeholder="Email" />
+                        <input type="tel" name="tel" id="tel" required placeholder="Portable" />
+                        <textarea name="textarea" id="textarea" required spellcheck="true" placeholder="Ecrivez votre demande"></textarea>
                         <button>Envoyer ma demande</button>
                     </form>
                 </section>
@@ -138,7 +90,6 @@
                     Oui, toutes nos recettes sont testées avant leur publication
                     pour garantir un résultat réussi à chaque fois.
                 </details>
-
                 <details>
                     <summary>
                         Les recettes sont-elles adaptées aux régimes
@@ -147,7 +98,6 @@
                     Nous proposons plusieurs recettes végétariennes et véganes,
                     ainsi que des options sans gluten ou sans sucre ajouté.
                 </details>
-
                 <details>
                     <summary>
                         Les ingrédients sont-ils faciles à trouver ?
@@ -155,7 +105,6 @@
                     Oui, nous privilégions des produits simples, disponibles en
                     supermarché ou sur les marchés locaux.
                 </details>
-
                 <details>
                     <summary>Puis-je proposer ma propre recette ?</summary>
                     Bien sûr ! Vous pouvez envoyer votre recette via notre
@@ -177,24 +126,16 @@
                     <h4>Navigation</h4>
                     <ul class="footer-nav-list">
                         <li class="footer-nav-item">
-                            <a href="../index.html" class="footer-nav-link"
-                                >Accueil</a
-                            >
+                            <a href="../index.html" class="footer-nav-link">Accueil</a>
                         </li>
                         <li class="footer-nav-item">
-                            <a href="#" class="footer-nav-link"
-                                >Ajouter une recette</a
-                            >
+                            <a href="#" class="footer-nav-link">Ajouter une recette</a>
                         </li>
                         <li class="footer-nav-item">
-                            <a href="favoris.html" class="footer-nav-link"
-                                >Mes favoris</a
-                            >
+                            <a href="favoris.html" class="footer-nav-link">Mes favoris</a>
                         </li>
                         <li class="footer-nav-item">
-                            <a href="aPropos.html" class="footer-nav-link"
-                                >À propos</a
-                            >
+                            <a href="a_propos.html" class="footer-nav-link">À propos</a>
                         </li>
                     </ul>
                 </div>
