--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                         <div class="heart-buttonDiv">
                         <img
                             class="heart-button"
-                            src="assets/icons/grayHeart.jpg"
+                            src="assets/icons/grayHeart.png"
                             alt="Favori"
                             style="cursor: pointer;">
                          </div>
